LightningDev/force-app/main/default/objects/charity__c/charity__c.object-meta.xml
<CustomObject>
    <label>charity</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>charity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>charitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>