LightningDev/force-app/main/default/objects/charity__c/fields/Appilicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Appilicant_Email__c</fullName>
    <label>Appilicant_Email</label>
    <type>Email</type>
</CustomField>