LightningDev/force-app/main/default/objects/charity__c/fields/Appilicant_phone__c.field-meta.xml
<CustomField>
    <fullName>Appilicant_phone__c</fullName>
    <label>Appilicant_phone</label>
    <type>Phone</type>
</CustomField>