LightningDev/force-app/main/default/objects/charity__c/fields/Charity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charity_Amount__c</fullName>
    <label>Charity_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>